# fast_api_docker_demo

./: README.md  docker-compose.yml
db/: Dockerfile  create.sql
fast-api-docker/: Dockerfile  Dockerfile.prod  pyproject.toml
fast-api-docker/fast_api_docker/: config.py  db.py  main.py
fast-api-docker/fast_api_docker/api/: crud.py  ping.py  summaries.py
fast-api-docker/fast_api_docker/models/: tortoise.py
fast-api-docker/tests/: config_test.py  test_ping.py
