[tool.poetry]
name = "fast-api-docker"
version = "0.1.0"
description = ""
authors = ["JohnSoi <un.perso@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
tortoise-orm = "^0.20.0"
aerich = "^0.7.2"
pytest = "^7.4.3"
requests = "^2.31.0"
httpx = "^0.25.2"

[tool.aerich]
tortoise_orm = "fast_api_docker.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
